--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
             <li><a href="#resum">Resume</a></li>
 
-            <li><a href="#">Skills</a></li>
+            <li><a href="#skills">Skills</a></li>
 
-            <li><a href="#">Services</a></li>
+            <li><a href="#services">Services</a></li>
 
             <li><a href="#">Portifolio</a></li>
 
@@ -163,7 +163,7 @@
     </div>
     <!-- end education -->
     <!-- start Skills -->
-    <div class="skills">
+    <div id="skills" class="skills">
       <div class="container">
         <div class="header">
           <h1>
@@ -190,6 +190,38 @@
       </div>
     </div>
     <!-- end Skills -->
+    <!-- start services  -->
+    <div id="services" class="services">
+      <div class="container">
+        <div class="header">
+          <h1>
+            My <span class="text" id="">Services</span
+            ><span id="sk" class="spanstar"
+              ><i class="star fa-solid fa-star"></i
+            ></span>
+          </h1>
+        </div>
+        <div class="serv">
+          <div class="webdesign">
+            <i class="fa-solid fa-desktop"></i>
+            <h2>Web Design</h2>
+            <p>
+              I have the ability to design an integrated website that is
+              responsive to all screens using the required technologies
+            </p>
+          </div>
+          <div class="convert">
+            <i class="fa-solid fa-tablet-screen-button"></i>
+            <h2>Convert UI To Website</h2>
+            <p>
+              I have the ability to convert any UI to website that is responsive
+              to all screens using the required technologies
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end services  -->
 
     <script src="main.js"></script>
   </body>
