--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <li><a href="#services">Services</a></li>
 
-            <li><a href="#">Portifolio</a></li>
+            <li><a href="#portfol">Portifolio</a></li>
 
             <li><a href="#">Contact</a></li>
           </ul>
@@ -222,6 +222,201 @@
       </div>
     </div>
     <!-- end services  -->
+    <!-- start Portifolio -->
+    <div id="portfol" class="portfol">
+      <div class="container">
+        <div class="header">
+          <h1>
+            My <span class="text" id="">Portifolio</span
+            ><span id="sk" class="spanstar"
+              ><i class="star fa-solid fa-star"></i
+            ></span>
+          </h1>
+        </div>
+        <ul>
+          <li class="allul active">All</li>
+          <li class="cssul">Css3</li>
+          <li class="animationul">Animation</li>
+          <li class="javaul">JavaScript</li>
+        </ul>
+        <div class="shufful">
+          <div class="allthing">
+            <div>
+              <img src="shuffel/calculator-js.jpg" alt="" />
+              <p>Simple calculator</p>
+              <div class="overlay">
+                <a
+                  target="_blank"
+                  href="https://mina-salib.github.io/calculator/"
+                >
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/clock-animation.jpg" alt="" />
+              <p>Clock</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/clock/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/css.jpg" alt="" />
+              <p>My first template</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/myfirst/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/css2.jpg" alt="" />
+              <p>My Second template</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/k3sper/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/face-animation.jpg" alt="" />
+              <p>Face Animation</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/face/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/js1.jpg" alt="" />
+              <p>Age Calculator</p>
+              <div class="overlay">
+                <a
+                  target="_blank"
+                  href="https://mina-salib.github.io/ageCalculator/"
+                >
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/loading-animation.jpg" alt="" />
+              <p>loading Page Animation</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/loding/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="css3 shuffelhiden">
+            <div>
+              <img src="shuffel/css.jpg" alt="" />
+              <p>My first template</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/myfirst/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/css2.jpg" alt="" />
+              <p>Kasper | My Second template</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/k3sper/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="cssanimation shuffelhiden">
+            <div>
+              <img src="shuffel/loading-animation.jpg" alt="" />
+              <p>loading Page Animation</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/loding/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/face-animation.jpg" alt="" />
+              <p>Face Animation</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/face/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/clock-animation.jpg" alt="" />
+              <p>Clock</p>
+              <div class="overlay">
+                <a target="_blank" href="https://mina-salib.github.io/clock/">
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="javaScript shuffelhiden">
+            <div>
+              <img src="shuffel/calculator-js.jpg" alt="" />
+              <p>Simple calculator</p>
+              <div class="overlay">
+                <a
+                  target="_blank"
+                  href="https://mina-salib.github.io/calculator/"
+                >
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <img src="shuffel/js1.jpg" alt="" />
+              <p>Age Calculator</p>
+              <div class="overlay">
+                <a
+                  target="_blank"
+                  href="https://mina-salib.github.io/ageCalculator/"
+                >
+                  <i class="fa-brands fa-github-square"></i>
+                  <p>Visite site</p>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end Portifolio -->
 
     <script src="main.js"></script>
   </body>
