--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul class="navul">
             <li><a href="#home-page">Home</a></li>
 
-            <li><a href="#resum">Resume</a></li>
+            <li><a href="#divresum">Resume</a></li>
 
             <li><a href="#skills">Skills</a></li>
 
@@ -33,7 +33,7 @@
 
             <li><a href="#portfol">Portifolio</a></li>
 
-            <li><a href="#">Contact</a></li>
+            <li><a href="#contactus">Contact</a></li>
           </ul>
           <i id="menue" class="fa-solid fa-bars"></i>
         </nav>
@@ -46,16 +46,28 @@
             <h2>I'm <span class="edit"></span><span class="mous">|</span></h2>
             <ul>
               <li>
-                <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+                <a target="_blank" href="https://www.facebook.com/alostora.2200"
+                  ><i class="fa-brands fa-facebook-square"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/mina-salib07"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
+                <a
+                  target="_blank"
+                  href="https://twitter.com/MiNa_SaLib07?t=L0Oezshigz69X5V-onEcpQ&s=09"
+                  ><i class="fa-brands fa-twitter-square"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fa-brands fa-instagram-square"></i></a>
+                <a target="_blank" href="https://www.instagram.com/mina_salib2/"
+                  ><i class="fa-brands fa-instagram-square"></i
+                ></a>
               </li>
             </ul>
           </div>
@@ -64,10 +76,10 @@
         <!-- End homeContent -->
       </div>
     </div>
-    <!-- start homepage  -->
+    <!-- end homepage  -->
 
     <!-- start resume -->
-    <div class="resum">
+    <div class="resum" id="divresum">
       <div class="container">
         <div class="header">
           <h1>
@@ -235,7 +247,7 @@
         </div>
         <ul>
           <li class="allul active">All</li>
-          <li class="cssul">Css3</li>
+          <li class="cssul">CSS3</li>
           <li class="animationul">Animation</li>
           <li class="javaul">JavaScript</li>
         </ul>
@@ -417,7 +429,105 @@
       </div>
     </div>
     <!-- end Portifolio -->
+    <!-- start contactus -->
+    <div id="contactus" class="contactus">
+      <div class="container">
+        <div class="header">
+          <h1>
+            <span class="text" id="">Contact Us</span>
+            <span id="sk" class="spanstar">
+              <i class="fa-solid fa-envelope"></i>
+            </span>
+          </h1>
+        </div>
+        <div class="content">
+          <div class="image">
+            <img src="contactus/Mention-bro.svg" alt="" />
+          </div>
+          <div class="links">
+            <div>
+              <i class="fa-solid fa-location-dot"></i>
+              <h2>Address</h2>
+              <p>Alminya-Egypt</p>
+            </div>
 
+            <div>
+              <i class="fa-brands fa-facebook-square"></i>
+              <h2>Facebook</h2>
+              <a target="_blank" href="https://www.facebook.com/alostora.2200">
+                Contact me
+                <i class="fa-solid fa-arrow-right-long"></i>
+              </a>
+            </div>
+            <div class="num3">
+              <i class="fa-brands fa-linkedin"></i>
+              <h2>LinkedIn</h2>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/mina-salib07"
+              >
+                Contact me
+                <i class="fa-solid fa-arrow-right-long"></i>
+              </a>
+            </div>
+            <div class="num4">
+              <i class="fa-brands fa-twitter-square"></i>
+              <h2>Twitter</h2>
+              <a
+                target="_blank"
+                href="https://twitter.com/MiNa_SaLib07?t=L0Oezshigz69X5V-onEcpQ&s=09"
+              >
+                Contact me
+                <i class="fa-solid fa-arrow-right-long"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end contactus -->
+    <!-- start footer -->
+    <div class="footer">
+      <div class="container">
+        <div class="infooter">
+          <ul>
+            <li>
+              <a target="_blank" href="https://www.facebook.com/alostora.2200">
+                <i class="fa-brands fa-facebook-square"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/mina-salib07"
+              >
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://twitter.com/MiNa_SaLib07?t=L0Oezshigz69X5V-onEcpQ&s=09"
+              >
+                <i class="fa-brands fa-twitter-square"></i>
+              </a>
+            </li>
+            <li>
+              <a target="_blank" href="https://github.com/MiNa-SaLib">
+                <i class="fa-brands fa-github-square"></i>
+              </a>
+            </li>
+            <li>
+              <a target="_blank" href="https://www.instagram.com/mina_salib2/">
+                <i class="fa-brands fa-instagram-square"></i>
+              </a>
+            </li>
+          </ul>
+          <p>&copy; 2022 All Rights Reserved <span>MiNa SaLib</span></p>
+        </div>
+      </div>
+    </div>
+    <!-- end footer -->
     <script src="main.js"></script>
   </body>
 </html>
